<resources>
    <string name="app_name">ReactionGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="question">Which number is the smallest?</string>
    <string name="smNumber_Answer4">Answer4</string>
    <string name="smNumber_Answer3">Answer3</string>
    <string name="smNumber_Answer2">Answer2</string>
    <string name="smNumber_Answer1">Answer1</string>
    <string name="smNumber_GameFinished">Game Over!</string>
    <string name="smNumber_GameFinished_Timeout">Time was running out. You lost!</string>
    <string name="smNumber_GameFinished_AnswerCorrect">Great! You\'ve got it!</string>
    <string name="smNumber_GameFinished_AnswerWrong">That\'s wrong. You lose!</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_password_confirmation">Password confirmation has to match the password</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_main">Reactiongame</string>

    <string name="title_section1">Profil</string>
    <string name="title_section2">My games</string>
    <string name="title_section3">Highscores</string>
    <string name="games_empty_list">You haven\'t any current game started.</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="reactiongame_logo_description">logo of reactiongame</string>
    <string name="button_log_out">Log out</string>
</resources>
